adjust margins and paddings to fix spacing of website sections

--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,7 @@ body {
   align-items: center;
   gap: 1rem;
   gap: 3rem;
+  padding-bottom: 5rem;
 }
 .contact__contactContentWrapper {
   display: flex;
@@ -1091,7 +1092,6 @@ body {
 
 .header__heroContainer {
   filter: drop-shadow(0px 10px 4px rgba(30, 32, 32, 0.85));
-  min-height: 95vh;
   position: relative;
 }
 
@@ -1107,7 +1107,7 @@ body {
   background-size: cover;
   clip-path: polygon(100% 100%, 79% 96%, 61% 100%, 55% 93%, 33% 100%, 21% 93%, 14% 100%, 0 96%, 0 0, 100% 0);
   width: 100%;
-  padding: 5rem 2rem;
+  padding: 5rem 5rem;
 }
 .hero__contentWrapper {
   display: flex;
@@ -1117,6 +1117,7 @@ body {
   gap: 1rem;
   gap: 1.5rem;
   width: min(100%, 45rem);
+  padding-bottom: 3rem;
 }
 @media (min-width: 56.25em) {
   .hero__contentWrapper {
@@ -1198,7 +1199,7 @@ body {
   align-items: center;
   gap: 1rem;
   gap: 2rem;
-  padding: 0rem 0rem 5rem;
+  padding: 5rem 0rem 5rem;
   position: relative;
 }
 .about__aboutContentWrapper {
@@ -1254,7 +1255,15 @@ body {
   align-items: center;
   gap: 1rem;
 }
+@media (min-width: 37.5em) {
+  .about {
+    padding-top: 5rem;
+  }
+}
 @media (min-width: 56.25em) {
+  .about {
+    padding-top: 5rem;
+  }
   .about__aboutContentWrapper {
     display: flex;
     flex-direction: row;
@@ -1291,7 +1300,7 @@ body {
   align-items: center;
   gap: 1rem;
   gap: 2rem;
-  padding: 0rem 0rem 5rem;
+  padding: 0rem 0rem 2rem;
   position: relative;
 }
 .products__aboutContentWrapper {
