--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
 .header {
     &__heroContainer {
         filter: drop-shadow(0px 10px 4px rgba($cp-dark, .85));
-        min-height: 95vh;
+        // min-height: 95vh;
         position: relative;
     }
 }
@@ -14,11 +14,12 @@
     background-size: cover;
     clip-path: polygon(100% 100%, 79% 96%, 61% 100%, 55% 93%, 33% 100%, 21% 93%, 14% 100%, 0 96%, 0 0, 100% 0);
     width: 100%;
-    padding: 5rem 2rem;
+    padding: 5rem 5rem;
     &__contentWrapper {
         @include displayFlexColumn;
         gap: 1.5rem;
         width: min(100%, 45rem);
+        padding-bottom: 3rem;
         @include respond(tab-land) {
             @include displayFlexRow;
             gap: 5rem;
